--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "keep-react": "^1.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
@@ -19,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5"
   },
