--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^8.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-rating": "^2.0.5",
