--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.0.2",
     "keep-react": "^1.6.1",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
