--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "date-fns": "^3.6.0",
     "firebase": "^11.0.2",
     "keep-react": "^1.6.1",
     "localforage": "^1.10.0",
